# VidETHS

./: Development.code-workspace
backend/: Cargo.toml
backend/src/: main.rs  stats.rs
backend/src/api/: v1.rs
backend/src/db/: mod.rs  room.rs  user.rs
frontend/: package.json  webpack.config.js
frontend/src/: index.html  vars.ts
not_backend/: Dockerfile  Dockerfile.devel  main.ts  tsconfig.json  vars.ts
