[package]
name = "backend"
version = "0.1.0"
authors = ["Willow Carlson-Huber <willow.ch@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.7.3"
base64 = "0.13.0"
clokwerk = "0.3.3"
